// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots > AiBriefing 1`] = `
<div>
  <section
    aria-live="polite"
    class="ai-brief"
  >
    <div
      aria-hidden="true"
      class="ai-brief-orb"
    >
      <span
        class="ai-brief-ring"
      />
      <span
        class="ai-brief-ring"
      />
      <span
        class="ai-brief-spark"
      />
      <span
        class="ai-brief-core"
      />
    </div>
    <div
      class="ai-brief-body"
    >
      <div
        class="ai-brief-meta"
      >
        <h2>
          Ассистент
        </h2>
        <span
          class="muted"
        >
          2
        </span>
      </div>
    </div>
  </section>
</div>
`;

exports[`snapshots > AiBriefing enriched 1`] = `
<div>
  <section
    aria-live="polite"
    class="ai-brief ready"
  >
    <div
      aria-hidden="true"
      class="ai-brief-orb live"
    >
      <span
        class="ai-brief-ring"
      />
      <span
        class="ai-brief-ring"
      />
      <span
        class="ai-brief-spark"
      />
      <span
        class="ai-brief-core"
      />
    </div>
    <div
      class="ai-brief-body"
    >
      <div
        class="ai-brief-meta"
      >
        <h2>
          Ассистент
        </h2>
        <span
          class="ai-brief-status ok "
        >
          Сводка для руководителя
        </span>
        <span
          class="muted"
        >
          2
        </span>
      </div>
      <div
        class="ai-brief-summary"
      >
        <p>
          Вижу 
          <strong
            class="rec-num"
          >
            2
          </strong>
           сигнала. Первым делом: ТОО Alpha — Вернуть X1.
        </p>
        <div
          class="ai-digest-stats"
        >
          <span
            class="ai-digest-stat "
          >
            <strong>
              1
            </strong>
            Вернуть
          </span>
          <span
            class="ai-digest-stat is-empty"
          >
            <strong>
              0
            </strong>
            Подсортировать
          </span>
          <span
            class="ai-digest-stat is-empty"
          >
            <strong>
              0
            </strong>
            Переложить
          </span>
          <span
            class="ai-digest-stat is-empty"
          >
            <strong>
              0
            </strong>
            Снизить цену
          </span>
        </div>
        <div
          class="ai-brief-actions"
        >
          <button
            class="btn"
            type="button"
          >
            Открыть аналитический отчёт
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`snapshots > CbrRates 1`] = `
<div>
  <div
    aria-label="Курсы ЦБ РФ"
    class="cbr-rates"
  >
    <article
      class="cbr-rate"
    >
      <div
        class="cbr-rate-head"
      >
        <span
          class="cbr-rate-code"
        >
          USD
        </span>
        <span
          class="cbr-rate-change down"
        >
          −0,13%
        </span>
      </div>
      <div
        class="cbr-rate-foot"
      >
        <div>
          <div
            class="cbr-rate-value"
          >
            86,89 ₽
          </div>
          <div
            class="cbr-rate-unit"
          >
            за 1 $
          </div>
        </div>
        <svg
          aria-hidden="true"
          class="cbr-spark"
          height="36"
          viewBox="0 0 96 36"
          width="96"
        >
          <polyline
            fill="none"
            points="2.0,34.0 48.0,2.0 94.0,9.0"
            stroke="var(--bad)"
            stroke-linejoin="round"
            stroke-width="1.8"
          />
        </svg>
      </div>
    </article>
    <article
      class="cbr-rate"
    >
      <div
        class="cbr-rate-head"
      >
        <span
          class="cbr-rate-code"
        >
          EUR
        </span>
        <span
          class="cbr-rate-change up"
        >
          +0,23%
        </span>
      </div>
      <div
        class="cbr-rate-foot"
      >
        <div>
          <div
            class="cbr-rate-value"
          >
            100,60 ₽
          </div>
          <div
            class="cbr-rate-unit"
          >
            за 1 €
          </div>
        </div>
        <svg
          aria-hidden="true"
          class="cbr-spark"
          height="36"
          viewBox="0 0 96 36"
          width="96"
        >
          <polyline
            fill="none"
            points="2.0,34.0 94.0,2.0"
            stroke="var(--ok)"
            stroke-linejoin="round"
            stroke-width="1.8"
          />
        </svg>
      </div>
    </article>
    <article
      class="cbr-rate"
    >
      <div
        class="cbr-rate-head"
      >
        <span
          class="cbr-rate-code"
        >
          KZT
        </span>
        <span
          class="cbr-rate-change down"
        >
          −0,11%
        </span>
      </div>
      <div
        class="cbr-rate-foot"
      >
        <div>
          <div
            class="cbr-rate-value"
          >
            0,1852 ₽
          </div>
          <div
            class="cbr-rate-unit"
          >
            за 1 ₸
          </div>
        </div>
        <svg
          aria-hidden="true"
          class="cbr-spark"
          height="36"
          viewBox="0 0 96 36"
          width="96"
        >
          <polyline
            fill="none"
            points="2.0,34.0 94.0,2.0"
            stroke="var(--bad)"
            stroke-linejoin="round"
            stroke-width="1.8"
          />
        </svg>
      </div>
    </article>
  </div>
</div>
`;

exports[`snapshots > DataTable empty 1`] = `
<div>
  <div>
    <div
      class="table-wrap"
      style="max-height: calc(100vh - 260px);"
    >
      <table
        class="data-table"
      >
        <colgroup>
          <col />
        </colgroup>
        <thead>
          <tr>
            <th
              class="sortable"
              style="min-width: 72px;"
            >
              <span
                class="th-label"
              >
                Клиент
                <span
                  class="sort-ind "
                >
                  ↕
                </span>
              </span>
              <span
                class="col-resizer"
              />
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
      <div
        class="empty-state"
      >
        <h3>
          Нет продаж за период
        </h3>
        <p>
          Загрузите Excel.
        </p>
        <a
          class="btn secondary"
          href="/uploads"
        >
          Загрузить продажи
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshots > DataTable numbers 1`] = `
<div>
  <div>
    <div
      class="table-wrap"
      style="max-height: calc(100vh - 260px);"
    >
      <table
        class="data-table"
      >
        <colgroup>
          <col />
          <col
            style="width: 80px;"
          />
          <col
            style="width: 120px;"
          />
        </colgroup>
        <thead>
          <tr>
            <th
              class="sticky sortable"
              style="min-width: 72px;"
            >
              <span
                class="th-label"
              >
                Клиент
                <span
                  class="sort-ind "
                >
                  ↕
                </span>
              </span>
              <span
                class="col-resizer"
              />
            </th>
            <th
              class="num sortable"
              style="width: 80px; min-width: 72px;"
            >
              <span
                class="th-label"
              >
                Шт
                <span
                  class="sort-ind "
                >
                  ↕
                </span>
              </span>
              <span
                class="col-resizer"
              />
            </th>
            <th
              class="num sortable"
              style="width: 120px; min-width: 72px;"
            >
              <span
                class="th-label"
              >
                Сумма
                <span
                  class="sort-ind "
                >
                  ↕
                </span>
              </span>
              <span
                class="col-resizer"
              />
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="sticky"
            >
              ИП Garant.S
            </td>
            <td
              class="num"
            >
              12
            </td>
            <td
              class="num"
            >
              43098
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`snapshots > DwellHeatmap 1`] = `
<div>
  <div
    class="heatmap-wrap"
  >
    <div
      class="heatmap-legend"
    >
      <span
        class="dwell-fresh"
      >
        0–1 мес.
      </span>
      <span
        class="dwell-warm"
      >
        2–3
      </span>
      <span
        class="dwell-stale"
      >
        4–6
      </span>
      <span
        class="dwell-dead"
      >
        7+
      </span>
    </div>
    <div
      class="heatmap-scroll"
    >
      <table
        class="heatmap"
      >
        <thead>
          <tr>
            <th
              class="heatmap-corner"
            >
              Клиент
            </th>
            <th
              class="heatmap-sku"
              title="000001797 · Кольцо золото"
            >
              <span
                class="heatmap-sku-name"
              >
                Кольцо золото
              </span>
              <span
                class="heatmap-sku-code"
              >
                1797
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <th
              class="heatmap-corner"
              title="ТОО Alpha"
            >
              ТОО Alpha
            </th>
            <td
              class="dwell-dead"
              title="ТОО Alpha · 000001797: залежалый товар 7 мес., остаток 3"
            >
              7
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`snapshots > EmptyState 1`] = `
<div>
  <div
    class="empty-state"
  >
    <h3>
      Нет продаж за период
    </h3>
    <p>
      Загрузите Excel продаж.
    </p>
    <a
      class="btn secondary"
      href="/uploads"
    >
      Загрузить продажи
    </a>
  </div>
</div>
`;

exports[`snapshots > ExcelLabel 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="btn-icon excel-icon"
    fill="none"
    height="16"
    viewBox="0 0 24 24"
    width="16"
  >
    <path
      d="M11.1 3.15h5.7L21 7.5v12.1c0 .9-.75 1.65-1.65 1.65h-8.25c-.9 0-1.65-.75-1.65-1.65V4.8c0-.9.75-1.65 1.65-1.65Z"
      stroke="currentColor"
      stroke-linejoin="round"
      stroke-width="1.75"
    />
    <path
      d="M16.8 3.25v4.25H21"
      stroke="currentColor"
      stroke-linejoin="round"
      stroke-width="1.75"
    />
    <rect
      fill="#217346"
      height="12.7"
      rx="1.7"
      width="12.7"
      x="2.25"
      y="8.2"
    />
    <rect
      fill="#fff"
      height="9.3"
      rx=".55"
      width="9.3"
      x="3.95"
      y="9.9"
    />
    <path
      d="M6.15 11.35h1.7L8.6 13.7l.75-2.35h1.7L9.7 14.3l1.55 3.35H9.45L8.6 15.1l-.85 2.55H6.05l1.55-3.35-1.45-2.95Z"
      fill="#217346"
    />
  </svg>
  Excel
</div>
`;

exports[`snapshots > ExecutiveReport 1`] = `
<div>
  <div
    class="exec-report"
  >
    <section
      class="exec-lead"
    >
      <div
        class="exec-lead-kicker"
      >
        Сначала возврат
      </div>
      <p>
        Начните с возврата у ТОО Alpha.
      </p>
    </section>
    <section
      class="exec-block"
    >
      <h3>
        Обстановка
      </h3>
      <div
        class="exec-kpis"
      >
        <div
          class="exec-kpi"
        >
          <strong>
            1
          </strong>
          <span>
            сигналов
          </span>
        </div>
        <div
          class="exec-kpi"
        >
          <strong>
            1
          </strong>
          <span>
            клиентов
          </span>
        </div>
        <div
          class="exec-kpi urgent"
        >
          <strong>
            1
          </strong>
          <span>
            срочно
          </span>
        </div>
        <div
          class="exec-kpi"
        >
          <strong>
            0
          </strong>
          <span>
            важно
          </span>
        </div>
        <div
          class="exec-kpi"
        >
          <strong>
            0
          </strong>
          <span>
            на заметку
          </span>
        </div>
      </div>
      <div
        class="exec-actions"
      >
        <span
          class="exec-action-chip tone-return "
        >
          <strong>
            1
          </strong>
          Вернуть
        </span>
        <span
          class="exec-action-chip tone-restock is-empty"
        >
          <strong>
            0
          </strong>
          Подсортировать
        </span>
        <span
          class="exec-action-chip tone-transfer is-empty"
        >
          <strong>
            0
          </strong>
          Переложить
        </span>
        <span
          class="exec-action-chip tone-reprice is-empty"
        >
          <strong>
            0
          </strong>
          Снизить цену
        </span>
      </div>
    </section>
    <div
      class="exec-grid"
    >
      <section
        class="exec-card tone-return "
      >
        <h3>
          Вернуть
          <span>
            1
          </span>
        </h3>
        <p
          class="exec-note"
        >
          Верните залежалое.
        </p>
        <div
          class="exec-facts"
        >
          <div
            class="exec-fact"
          >
            <span>
              Клиентов
            </span>
            <strong>
              <strong
                class="rec-num"
              >
                1
              </strong>
            </strong>
          </div>
          <div
            class="exec-fact"
          >
            <span>
              Штук
            </span>
            <strong>
              <strong
                class="rec-num"
              >
                8
              </strong>
            </strong>
          </div>
          <div
            class="exec-fact"
          >
            <span>
              Средний простой
            </span>
            <strong>
              <strong
                class="rec-num"
              >
                7
              </strong>
               мес.
            </strong>
          </div>
        </div>
        <ul
          class="exec-top"
        >
          <li>
            <div>
              <strong>
                ТОО Alpha
              </strong>
              <span>
                Вернуть X1
              </span>
            </div>
            <em>
              <strong
                class="rec-num"
              >
                8
              </strong>
               шт.
            </em>
          </li>
        </ul>
      </section>
      <section
        class="exec-card tone-restock is-empty"
      >
        <h3>
          Подсортировать
          <span>
            0
          </span>
        </h3>
        <p
          class="muted"
        >
          Подсортировка не требуется.
        </p>
      </section>
      <section
        class="exec-card tone-transfer is-empty"
      >
        <h3>
          Переложить
          <span>
            0
          </span>
        </h3>
        <p
          class="muted"
        >
          Перекладывать нечего.
        </p>
      </section>
      <section
        class="exec-card tone-reprice is-empty"
      >
        <h3>
          Снизить цену
          <span>
            0
          </span>
        </h3>
        <p
          class="muted"
        >
          Разрывов по цене отгрузки нет.
        </p>
      </section>
    </div>
    <section
      class="exec-block"
    >
      <h3>
        Клиенты в фокусе
      </h3>
      <div
        class="exec-table-wrap"
      >
        <table
          class="exec-table"
        >
          <thead>
            <tr>
              <th>
                Клиент
              </th>
              <th>
                Сигналов
              </th>
              <th>
                Действия
              </th>
              <th>
                Главный кейс
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                ТОО Alpha
              </td>
              <td>
                1
              </td>
              <td>
                Вернуть
              </td>
              <td>
                Вернуть X1
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </section>
  </div>
</div>
`;

exports[`snapshots > FilePicker 1`] = `
<div>
  <div
    class="file-pick"
  >
    <input
      accept=".xlsx,.xls"
      type="file"
    />
    <button
      class="btn secondary sm"
      type="button"
    >
      Выбрать файл
    </button>
    <span
      class="muted"
    >
      Файл не выбран
    </span>
  </div>
</div>
`;

exports[`snapshots > HelpPage 1`] = `
<div>
  <header
    class="page-header"
  >
    <div
      class="page-header-lead"
    >
      <span
        class="page-header-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="none"
          height="22"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.8"
          viewBox="0 0 24 24"
          width="22"
        >
          <circle
            cx="12"
            cy="12"
            r="8.5"
          />
          <path
            d="M9.6 9.4a2.4 2.4 0 1 1 3.5 2.1c-.7.4-1.1.9-1.1 1.8V14"
          />
          <path
            d="M12 17.2h.01"
          />
        </svg>
      </span>
      <div>
        <h1>
          Справка
        </h1>
        <p
          class="muted"
        >
          Откуда цифры и как пользоваться экранами
        </p>
      </div>
    </div>
  </header>
  <div
    aria-label="Разделы справки"
    class="seg-tabs"
    role="tablist"
  >
    <button
      aria-selected="true"
      class="seg-tab active"
      role="tab"
      type="button"
    >
      Старт
    </button>
    <button
      aria-selected="false"
      class="seg-tab "
      role="tab"
      type="button"
    >
      Ввод данных
    </button>
    <button
      aria-selected="false"
      class="seg-tab "
      role="tab"
      type="button"
    >
      Отчёты
    </button>
    <button
      aria-selected="false"
      class="seg-tab "
      role="tab"
      type="button"
    >
      1С
    </button>
    <button
      aria-selected="false"
      class="seg-tab "
      role="tab"
      type="button"
    >
      По ролям
    </button>
    <button
      aria-selected="false"
      class="seg-tab "
      role="tab"
      type="button"
    >
      Админу
    </button>
  </div>
  <p
    class="help-intro"
  >
    Это рабочий стол по акции: смотрите, как клиенты продают, что им отгрузили из 1С и что лучше подсортировать. Цифры берутся из двух мест — не путайте их.
  </p>
  <div
    class="help-blocks"
  >
    <section
      class="panel help-card"
    >
      <div
        class="help-card-head"
      >
        <h2>
          Откуда цифры
        </h2>
      </div>
      <p
        class="help-lead"
      >
        Отгрузки и справочники подтягиваются из 1С. Продажи и остатки по магазинам менеджеры загружают сами, обычно раз в месяц.
      </p>
      <ul
        class="help-notes"
      >
        <li>
          Из 1С после синхронизации: номенклатура, клиенты, реализации, возвраты, заказы, производство. Отсюда факт отгрузки, журнал документов и часть рекомендаций по цене.
        </li>
        <li>
          Из загрузок менеджера (в сервисе или Excel): продажи в штуках и остатки. Отсюда мотивация, оборачиваемость, теплокарта и матрица в итоговом квартальном отчёте.
        </li>
        <li>
          План на квартал вносится отдельно — вручную или Excel на экране «Квартальные отчеты». Это штуки «сколько должны отгрузить», не деньги.
        </li>
        <li>
          Поэтому у одного клиента продажи в квартальном отчёте могут быть, а факт отгрузки — ноль: Excel залили, а реализаций в 1С за квартал нет. И наоборот.
        </li>
      </ul>
    </section>
    <section
      class="panel help-card"
    >
      <div
        class="help-card-head"
      >
        <h2>
          Вход
        </h2>
        <a
          class="help-link"
          href="/"
        >
          На дашборд
           →
        </a>
      </div>
      <ol
        class="help-steps"
      >
        <li>
          Откройте сервис и войдите по email и паролю, которые выдал администратор.
        </li>
        <li>
          Если попросит сменить пароль — придумайте новый, не короче 8 символов. Это нормально: пароль надо обновлять примерно раз в 90 дней.
        </li>
        <li>
          Позже пароль можно сменить внизу меню, кнопка «Сменить пароль».
        </li>
      </ol>
    </section>
    <section
      class="panel help-card"
    >
      <div
        class="help-card-head"
      >
        <h2>
          Как устроено меню
        </h2>
      </div>
      <ol
        class="help-steps"
      >
        <li>
          Аналитика — дашборд и отчёты: мотивация, оборачиваемость, кварталы, факт, рекомендации.
        </li>
        <li>
          1С — справочники и журнал. Документы только смотреть, создавать реализации здесь нельзя.
        </li>
        <li>
          Данные — ввод продаж и остатков. Сервис — оформление и эта справка.
        </li>
        <li>
          Администрирование (пользователи, аудит, админка) видно только администратору.
        </li>
      </ol>
      <ul
        class="help-notes"
      >
        <li>
          Слева меню можно свернуть: состояние запоминается, после обновления страницы не разъедется.
        </li>
        <li>
          В таблицах заголовок сортирует, край колонки тянется. Настройки колонок живут в этом браузере.
        </li>
      </ul>
    </section>
    <section
      class="panel help-card"
    >
      <div
        class="help-card-head"
      >
        <h2>
          Кто что видит
        </h2>
      </div>
      <ul
        class="help-notes"
      >
        <li>
          Менеджер — только свои клиенты, которых за ним закрепили.
        </li>
        <li>
          Региональный директор — клиенты своего региона, если регион указан в карточке пользователя.
        </li>
        <li>
          Аналитик и администратор видят все базы и отчёты.
        </li>
        <li>
          Участник акции помечен звёздочкой ★. Без неё клиент не попадёт в мотивацию, оборачиваемость, факт и рекомендации по акции. Если список пустой — напишите администратору.
        </li>
      </ul>
    </section>
    <section
      class="panel help-card"
    >
      <div
        class="help-card-head"
      >
        <h2>
          Оформление
        </h2>
        <a
          class="help-link"
          href="/settings"
        >
          Настройки
           →
        </a>
      </div>
      <ol
        class="help-steps"
      >
        <li>
          В «Настройках» выберите схему: Изумруд, Янтарь, Индиго или Тёмная.
        </li>
        <li>
          Схема запоминается в браузере и на цифры не влияет.
        </li>
      </ol>
    </section>
  </div>
</div>
`;

exports[`snapshots > PageHeader 1`] = `
<div>
  <header
    class="page-header"
  >
    <div
      class="page-header-lead"
    >
      <span
        class="page-header-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="none"
          height="22"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.8"
          viewBox="0 0 24 24"
          width="22"
        >
          <rect
            height="7.5"
            rx="1.5"
            width="7.5"
            x="3.5"
            y="3.5"
          />
          <rect
            height="4.5"
            rx="1.5"
            width="7.5"
            x="13"
            y="3.5"
          />
          <rect
            height="10"
            rx="1.5"
            width="7.5"
            x="13"
            y="10.5"
          />
          <rect
            height="7"
            rx="1.5"
            width="7.5"
            x="3.5"
            y="13.5"
          />
        </svg>
      </span>
      <div>
        <h1>
          Дашборд
        </h1>
        <p
          class="muted"
        >
          Сводка
        </p>
      </div>
    </div>
  </header>
</div>
`;

exports[`snapshots > Pager 1`] = `
<div>
  <div
    class="toolbar"
  >
    <button
      class="btn secondary"
      disabled=""
      type="button"
    >
      ←
    </button>
    <span
      class="pill"
    >
      1–50 из 216
    </span>
    <button
      class="btn secondary"
      type="button"
    >
      →
    </button>
  </div>
</div>
`;

exports[`snapshots > PeriodPicker 1`] = `
<div>
  <label
    class="field"
  >
    <span>
      Период
    </span>
    <div
      class="period-cal"
    >
      <button
        aria-expanded="false"
        class="period-cal-trigger"
        type="button"
      >
        <span>
          01.01.2023
           — 
          31.03.2023
        </span>
        <svg
          aria-hidden="true"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
        >
          <rect
            height="16"
            rx="2"
            width="18"
            x="3"
            y="5"
          />
          <path
            d="M16 3v4M8 3v4M3 11h18"
          />
        </svg>
      </button>
    </div>
  </label>
</div>
`;

exports[`snapshots > QuarterlyMatrix 1`] = `
<div>
  <div
    class="qcards"
  >
    <div
      class="qcards-bar"
    >
      <input
        class="control"
        placeholder="Найти контрагента…"
        value=""
      />
      <span
        class="muted"
      >
        1
         из 
        1
      </span>
    </div>
    <details
      class="qcard"
      open=""
    >
      <summary
        class="qcard-head"
      >
        <div>
          <h3>
            ИП Garant.S
          </h3>
          <div
            class="qcard-pills"
          >
            <span
              class="pill"
            >
              Удержание
            </span>
          </div>
        </div>
        <dl
          class="qcard-kpis"
        >
          <div>
            <dt>
              План отгр.
            </dt>
            <dd>
              50
            </dd>
          </div>
          <div>
            <dt>
              Факт отгр.
            </dt>
            <dd>
              —
            </dd>
          </div>
          <div>
            <dt>
              % отгр.
            </dt>
            <dd>
              —
            </dd>
          </div>
          <div>
            <dt>
              Отгр. пред.
            </dt>
            <dd>
              —
            </dd>
          </div>
          <div>
            <dt>
              Дин. отгр.
            </dt>
            <dd
              class=""
            >
              —
            </dd>
          </div>
          <div>
            <dt>
              Продажи
            </dt>
            <dd>
              —
            </dd>
          </div>
          <div>
            <dt>
              Пред. кв.
            </dt>
            <dd>
              80
            </dd>
          </div>
          <div>
            <dt>
              Динамика
            </dt>
            <dd
              class="dyn-down"
            >
              43%
            </dd>
          </div>
          <div>
            <dt>
              План след.
            </dt>
            <dd>
              34
            </dd>
          </div>
        </dl>
      </summary>
      <div
        class="qcard-blocks"
      >
        <div
          class="qblock qblock-metal"
        >
          <h4>
            Цвет металла
          </h4>
          <table>
            <thead>
              <tr>
                <th>
                  Категория
                </th>
                <th>
                  Остаток
                </th>
                <th>
                  Продажи
                </th>
                <th>
                  Об-ть
                </th>
                <th>
                  Ср. об-ть
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  Красное 585
                </td>
                <td
                  class="num"
                >
                  10
                </td>
                <td
                  class="num"
                >
                  8
                </td>
                <td
                  class="num turn-ok"
                >
                  80%
                </td>
                <td
                  class="num turn-mid"
                >
                  26,7%
                </td>
              </tr>
              <tr
                class="qblock-total"
              >
                <td>
                  Итого
                </td>
                <td
                  class="num"
                >
                  10
                </td>
                <td
                  class="num"
                >
                  34
                </td>
                <td
                  class="num turn-ok"
                >
                  340%
                </td>
                <td
                  class="num turn-ok"
                >
                  113,3%
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="qblock qblock-lts"
        >
          <h4>
            ЖЦТ
          </h4>
          <table>
            <thead>
              <tr>
                <th>
                  Категория
                </th>
                <th>
                  Остаток
                </th>
                <th>
                  Продажи
                </th>
                <th>
                  Об-ть
                </th>
                <th>
                  Ср. об-ть
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  Актив
                </td>
                <td
                  class="num"
                >
                  12
                </td>
                <td
                  class="num"
                >
                  9
                </td>
                <td
                  class="num turn-ok"
                >
                  75%
                </td>
                <td
                  class="num turn-mid"
                >
                  25%
                </td>
              </tr>
              <tr
                class="qblock-total"
              >
                <td>
                  Итого
                </td>
                <td
                  class="num"
                >
                  10
                </td>
                <td
                  class="num"
                >
                  34
                </td>
                <td
                  class="num turn-ok"
                >
                  340%
                </td>
                <td
                  class="num turn-ok"
                >
                  113,3%
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="qblock qblock-wear"
        >
          <h4>
            Тип изделия
          </h4>
          <table>
            <thead>
              <tr>
                <th>
                  Категория
                </th>
                <th>
                  Остаток
                </th>
                <th>
                  Продажи
                </th>
                <th>
                  Об-ть
                </th>
                <th>
                  Ср. об-ть
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  Кольцо
                </td>
                <td
                  class="num"
                >
                  5
                </td>
                <td
                  class="num"
                >
                  4
                </td>
                <td
                  class="num turn-ok"
                >
                  80%
                </td>
                <td
                  class="num turn-mid"
                >
                  26,7%
                </td>
              </tr>
              <tr
                class="qblock-total"
              >
                <td>
                  Итого
                </td>
                <td
                  class="num"
                >
                  10
                </td>
                <td
                  class="num"
                >
                  34
                </td>
                <td
                  class="num turn-ok"
                >
                  340%
                </td>
                <td
                  class="num turn-ok"
                >
                  113,3%
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <footer
        class="qcard-foot"
      >
        <div
          class="qcard-comment"
        >
          <h4>
            Комментарий
          </h4>
          <p>
            Участвует в повышенной мотивации
          </p>
        </div>
        <div
          class="qcard-recs"
        >
          <h4>
            Рекомендации
          </h4>
          <ul>
            <li>
              Подсортировать кольца Актив Ядро в красном золоте.
            </li>
          </ul>
        </div>
      </footer>
    </details>
  </div>
</div>
`;

exports[`snapshots > QuarterlyTzSheet 1`] = `
<div>
  <div
    class="tz-scroll"
  >
    <div
      class="tz-filters no-print"
    >
      <input
        class="control"
        placeholder="Контрагент…"
        value=""
      />
      <div
        class="tz-filter-select"
      >
        <div
          class="ui-select"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="ui-select-trigger"
            type="button"
          >
            <span>
              Все типы работы
            </span>
            <span
              class="chev"
            >
              ▾
            </span>
          </button>
        </div>
      </div>
      <div
        class="tz-filter-select"
      >
        <div
          class="ui-select"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="ui-select-trigger"
            type="button"
          >
            <span>
              Все менеджеры
            </span>
            <span
              class="chev"
            >
              ▾
            </span>
          </button>
        </div>
      </div>
      <label
        class="tz-check"
      >
        <input
          type="checkbox"
        />
        Показать всех с отгрузкой 1С
      </label>
      <button
        class="btn secondary sm"
        type="button"
      >
        Развернуть все
      </button>
      <span
        class="muted"
      >
        1
         из 
        1
      </span>
    </div>
    <table
      class="tz-sheet"
    >
      <thead>
        <tr>
          <th
            rowspan="2"
          >
            Контрагент
          </th>
          <th
            rowspan="2"
          >
            Тип работы контрагента
          </th>
          <th
            rowspan="2"
          >
            % типа работ
          </th>
          <th
            rowspan="2"
          >
            План отгрузки на 3 квартал
          </th>
          <th
            class="blk-metal"
            colspan="5"
          >
            Цвет металла
          </th>
          <th
            class="blk-lts"
            colspan="5"
          >
            ЖЦТ
          </th>
          <th
            class="blk-wear"
            colspan="5"
          >
            Тип изделия
          </th>
          <th
            rowspan="2"
          >
            итого продажи 2 кв.
          </th>
          <th
            rowspan="2"
          >
            итого продажи 1 кв.
          </th>
          <th
            rowspan="2"
          >
            Динамика 3 кв. / 2 кв. (шт)
          </th>
          <th
            rowspan="2"
          >
            Комментарий
          </th>
          <th
            rowspan="2"
          >
            План работы на 4 кв (шт)
          </th>
          <th
            rowspan="2"
          >
            Рекомендации
          </th>
        </tr>
        <tr>
          <th>
            категория
          </th>
          <th>
            ср остаток на квартал
          </th>
          <th>
            итого продажи 3 кв
          </th>
          <th>
            Об-ть 3 кв
          </th>
          <th>
            Ср. об-ть за 3 кв
          </th>
          <th>
            категория
          </th>
          <th>
            ср остаток на квартал
          </th>
          <th>
            итого продажи 3 кв
          </th>
          <th>
            Об-ть 3 кв
          </th>
          <th>
            Ср. об-ть за 3 кв
          </th>
          <th>
            категория
          </th>
          <th>
            ср остаток на квартал
          </th>
          <th>
            итого продажи 3 кв
          </th>
          <th>
            Об-ть 3 кв
          </th>
          <th>
            Ср. об-ть за 3 кв
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="tz-total"
        >
          <td
            class="tz-name"
            rowspan="1"
          >
            <button
              aria-expanded="false"
              class="tz-fold no-print"
              type="button"
            >
              ▶
            </button>
            ИП Garant.S
          </td>
          <td
            rowspan="1"
          >
            Удержание
          </td>
          <td
            class="num"
            rowspan="1"
          />
          <td
            class="num"
            rowspan="1"
          >
            50
          </td>
          <td>
            Итого
          </td>
          <td
            class="num"
          >
            10
          </td>
          <td
            class="num"
          >
            34
          </td>
          <td
            class="num"
          >
            340%
          </td>
          <td
            class="num"
          >
            113,3%
          </td>
          <td>
            Итого
          </td>
          <td
            class="num"
          >
            10
          </td>
          <td
            class="num"
          >
            34
          </td>
          <td
            class="num"
          >
            340%
          </td>
          <td
            class="num"
          >
            113,3%
          </td>
          <td>
            Итого
          </td>
          <td
            class="num"
          >
            10
          </td>
          <td
            class="num"
          >
            34
          </td>
          <td
            class="num"
          >
            340%
          </td>
          <td
            class="num"
          >
            113,3%
          </td>
          <td
            class="num"
          >
            80
          </td>
          <td
            class="num"
          >
            70
          </td>
          <td
            class="num dyn-down"
          >
            −46
          </td>
          <td
            class="tz-comment"
          >
            <p
              class="tz-comment-text"
            >
              Участвует в повышенной мотивации
            </p>
            <div
              class="tz-comment-edit no-print"
            >
              <textarea
                class="control"
                placeholder="Новый комментарий"
                rows="2"
              />
              <div
                class="tz-comment-actions"
              >
                <button
                  class="btn sm"
                  disabled=""
                  type="button"
                >
                  Сохранить
                </button>
                <button
                  class="btn secondary sm"
                  type="button"
                >
                  История
                </button>
              </div>
            </div>
          </td>
          <td
            class="num"
          >
            34
          </td>
          <td
            class="tz-recs"
            title="Подсортировать кольца."
          >
            <ul>
              <li>
                Подсортировать кольца.
              </li>
              <li>
                Верните залежалый товар.
              </li>
            </ul>
          </td>
        </tr>
        <tr
          class="tz-gap"
        >
          <td
            colspan="25"
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`snapshots > RecommendationCard 1`] = `
<div>
  <article
    class="panel rec-card high has-llm"
    style="animation-delay: 0ms;"
  >
    <div
      class="rec-card-head"
    >
      <div
        class="rec-card-pills"
      >
        <span
          class="pill"
        >
          Залежалый товар
        </span>
        <span
          class="pill bad"
        >
          Срочно
        </span>
        <span
          class="pill rec-action"
        >
          Вернуть
        </span>
        <span
          class="pill rec-ai"
        >
          ИИ
        </span>
      </div>
      <div
        class="rec-score"
        title="Приоритет 82"
      >
        <span>
          82
        </span>
        <i
          style="width: 82%;"
        />
      </div>
    </div>
    <div
      class="muted rec-who"
    >
      ТОО Alpha · X1
    </div>
    <h3
      class="rec-title"
    >
      Вернуть X1
    </h3>
    <p
      class="rec-message"
    >
      Вернуть или обменять артикул X1.
    </p>
    <div
      class="rec-why"
    >
      <span
        class="pill"
      >
        <strong
          class="rec-num"
        >
          7
        </strong>
         мес. без продаж
      </span>
      <span
        class="pill"
      >
        об-ть 
        <strong
          class="rec-num"
        >
          4,5%
        </strong>
      </span>
    </div>
    <div
      class="rec-llm"
    >
      <div
        class="rec-llm-label"
      >
        Совет ИИ
      </div>
      Предложите обмен на ходовую связку.
    </div>
  </article>
</div>
`;

exports[`snapshots > SettingsPage 1`] = `
<div>
  <header
    class="page-header"
  >
    <div
      class="page-header-lead"
    >
      <span
        class="page-header-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="none"
          height="22"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.8"
          viewBox="0 0 24 24"
          width="22"
        >
          <rect
            height="7.5"
            rx="1.5"
            width="7.5"
            x="3.5"
            y="3.5"
          />
          <rect
            height="4.5"
            rx="1.5"
            width="7.5"
            x="13"
            y="3.5"
          />
          <rect
            height="10"
            rx="1.5"
            width="7.5"
            x="13"
            y="10.5"
          />
          <rect
            height="7"
            rx="1.5"
            width="7.5"
            x="3.5"
            y="13.5"
          />
        </svg>
      </span>
      <div>
        <h1>
          Настройки
        </h1>
        <p
          class="muted"
        >
          Цветовая схема только для этого браузера. На отчёты и данные не влияет.
        </p>
      </div>
    </div>
  </header>
  <div
    class="panel"
  >
    <h2>
      Оформление
    </h2>
    <p
      class="muted"
    >
      Выберите схему. Изменение применяется сразу.
    </p>
    <div
      class="theme-grid"
    >
      <button
        aria-pressed="true"
        class="theme-card active"
        type="button"
      >
        <div
          aria-hidden="true"
          class="theme-preview"
        >
          <span
            style="background: rgb(238, 242, 246);"
          />
          <span
            style="background: rgb(13, 148, 136);"
          />
          <span
            style="background: rgb(17, 24, 39);"
          />
        </div>
        <strong>
          Изумруд
        </strong>
        <span
          class="muted"
        >
          Светлая бирюза
        </span>
        <span
          class="pill ok"
        >
          Выбрана
        </span>
      </button>
      <button
        aria-pressed="false"
        class="theme-card "
        type="button"
      >
        <div
          aria-hidden="true"
          class="theme-preview"
        >
          <span
            style="background: rgb(247, 241, 232);"
          />
          <span
            style="background: rgb(180, 83, 9);"
          />
          <span
            style="background: rgb(28, 25, 23);"
          />
        </div>
        <strong>
          Янтарь
        </strong>
        <span
          class="muted"
        >
          Тёплый золотой
        </span>
      </button>
      <button
        aria-pressed="false"
        class="theme-card "
        type="button"
      >
        <div
          aria-hidden="true"
          class="theme-preview"
        >
          <span
            style="background: rgb(238, 240, 247);"
          />
          <span
            style="background: rgb(79, 70, 229);"
          />
          <span
            style="background: rgb(17, 24, 39);"
          />
        </div>
        <strong>
          Индиго
        </strong>
        <span
          class="muted"
        >
          Холодный синий
        </span>
      </button>
      <button
        aria-pressed="false"
        class="theme-card "
        type="button"
      >
        <div
          aria-hidden="true"
          class="theme-preview"
        >
          <span
            style="background: rgb(15, 20, 26);"
          />
          <span
            style="background: rgb(45, 212, 191);"
          />
          <span
            style="background: rgb(229, 231, 235);"
          />
        </div>
        <strong>
          Тёмная
        </strong>
        <span
          class="muted"
        >
          Тёмный фон
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`snapshots > SourceSelect 1`] = `
<div>
  <div
    class="ui-select"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="ui-select-trigger"
      type="button"
    >
      <span>
        Все
      </span>
      <span
        class="chev"
      >
        ▾
      </span>
    </button>
  </div>
</div>
`;

exports[`snapshots > TableSkeleton 1`] = `
<div>
  <div
    class="table-wrap"
  >
    <table
      class="data-table"
    >
      <tbody>
        <tr
          class="table-skeleton-row"
        >
          <td>
            <span
              class="skel"
            />
          </td>
          <td>
            <span
              class="skel"
            />
          </td>
          <td>
            <span
              class="skel"
            />
          </td>
        </tr>
        <tr
          class="table-skeleton-row"
        >
          <td>
            <span
              class="skel"
            />
          </td>
          <td>
            <span
              class="skel"
            />
          </td>
          <td>
            <span
              class="skel"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`snapshots > UploadErrorsModal 1`] = `
<div>
  <div
    class="modal-backdrop"
    role="presentation"
  >
    <div
      aria-label="Ошибки загрузки"
      aria-modal="true"
      class="modal-card wide"
      role="dialog"
    >
      <div
        class="modal-head"
      >
        <div>
          <h2>
            Ошибки загрузки
          </h2>
          <p
            class="muted"
            style="margin: 6px 0px 0px;"
          >
            Обработано 10, ошибок 1
          </p>
        </div>
        <button
          class="btn secondary sm"
          type="button"
        >
          Закрыть
        </button>
      </div>
      <div
        class="table-wrap upload-errors-table"
      >
        <table>
          <thead>
            <tr>
              <th>
                Строка
              </th>
              <th>
                Поле
              </th>
              <th>
                Ошибка
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                4
              </td>
              <td>
                article
              </td>
              <td>
                Нет в справочнике
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshots > UploadFileModal 1`] = `
<div>
  <div
    class="modal-backdrop"
    role="presentation"
  >
    <div
      aria-label="template_sales.xlsx"
      aria-modal="true"
      class="modal-card wide"
      role="dialog"
    >
      <div
        class="modal-head"
      >
        <div>
          <h2>
            template_sales.xlsx
          </h2>
          <p
            class="muted"
            style="margin: 6px 0px 0px;"
          >
            Продажи · Успех
          </p>
        </div>
        <button
          class="btn secondary sm"
          type="button"
        >
          Закрыть
        </button>
      </div>
      <div
        class="toolbar"
        style="margin: 0px 0px 12px;"
      >
        <button
          class="btn secondary sm"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="btn-icon excel-icon"
            fill="none"
            height="14"
            viewBox="0 0 24 24"
            width="14"
          >
            <path
              d="M11.1 3.15h5.7L21 7.5v12.1c0 .9-.75 1.65-1.65 1.65h-8.25c-.9 0-1.65-.75-1.65-1.65V4.8c0-.9.75-1.65 1.65-1.65Z"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="1.75"
            />
            <path
              d="M16.8 3.25v4.25H21"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="1.75"
            />
            <rect
              fill="#217346"
              height="12.7"
              rx="1.7"
              width="12.7"
              x="2.25"
              y="8.2"
            />
            <rect
              fill="#fff"
              height="9.3"
              rx=".55"
              width="9.3"
              x="3.95"
              y="9.9"
            />
            <path
              d="M6.15 11.35h1.7L8.6 13.7l.75-2.35h1.7L9.7 14.3l1.55 3.35H9.45L8.6 15.1l-.85 2.55H6.05l1.55-3.35-1.45-2.95Z"
              fill="#217346"
            />
          </svg>
          Скачать файл
        </button>
      </div>
      <p
        class="muted"
        style="margin: 0px 0px 8px;"
      >
        Строк: 1
      </p>
      <div
        class="table-wrap upload-file-preview"
      >
        <table>
          <thead>
            <tr>
              <th>
                Головной контрагент
              </th>
              <th>
                Артикул
              </th>
              <th>
                Количество
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                ИП Garant.S
              </td>
              <td>
                IM-001
              </td>
              <td>
                2
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshots > UploadFileModal errors tab 1`] = `
<div>
  <div
    class="modal-backdrop"
    role="presentation"
  >
    <div
      aria-label="sales.xlsx"
      aria-modal="true"
      class="modal-card wide"
      role="dialog"
    >
      <div
        class="modal-head"
      >
        <div>
          <h2>
            sales.xlsx
          </h2>
          <p
            class="muted"
            style="margin: 6px 0px 0px;"
          >
            Продажи · Частично
          </p>
        </div>
        <button
          class="btn secondary sm"
          type="button"
        >
          Закрыть
        </button>
      </div>
      <div
        class="toolbar"
        style="margin: 0px 0px 12px;"
      >
        <button
          class="btn secondary sm"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="btn-icon excel-icon"
            fill="none"
            height="14"
            viewBox="0 0 24 24"
            width="14"
          >
            <path
              d="M11.1 3.15h5.7L21 7.5v12.1c0 .9-.75 1.65-1.65 1.65h-8.25c-.9 0-1.65-.75-1.65-1.65V4.8c0-.9.75-1.65 1.65-1.65Z"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="1.75"
            />
            <path
              d="M16.8 3.25v4.25H21"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="1.75"
            />
            <rect
              fill="#217346"
              height="12.7"
              rx="1.7"
              width="12.7"
              x="2.25"
              y="8.2"
            />
            <rect
              fill="#fff"
              height="9.3"
              rx=".55"
              width="9.3"
              x="3.95"
              y="9.9"
            />
            <path
              d="M6.15 11.35h1.7L8.6 13.7l.75-2.35h1.7L9.7 14.3l1.55 3.35H9.45L8.6 15.1l-.85 2.55H6.05l1.55-3.35-1.45-2.95Z"
              fill="#217346"
            />
          </svg>
          Скачать файл
        </button>
      </div>
      <div
        aria-label="Просмотр загрузки"
        class="seg-tabs"
        role="tablist"
        style="margin-bottom: 12px;"
      >
        <button
          aria-selected="false"
          class="seg-tab "
          role="tab"
          type="button"
        >
          Документ
        </button>
        <button
          aria-selected="true"
          class="seg-tab active"
          role="tab"
          type="button"
        >
          Ошибки (
          1
          )
        </button>
      </div>
      <div
        class="table-wrap upload-file-preview upload-errors-table"
      >
        <table>
          <thead>
            <tr>
              <th>
                Строка
              </th>
              <th>
                Поле
              </th>
              <th>
                Ошибка
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="num"
              >
                4
              </td>
              <td>
                article
              </td>
              <td>
                Нет в справочнике
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
